# PlacidSketch

./: Param.h  README.md  XSketch.h
PlacidSketch/: CMakeLists.txt  MurmurHash3.h  README.md  SteadySketch.h  XSketch.h  main.cpp  para.h  parm.h  stage1.h  stage2.h  stage3.h
PlacidSketch/baselines/SteadySketch/: CMakeLists.txt  main.cpp  parm.h
PlacidSketch/baselines/XSKetch/: CMakeLists.txt  Param.h  XSketch.h  main.cc
PlacidSketch/baselines/XSKetch/Common/: Matrix.h  Mmap.h  hash.h
PlacidSketch/baseslines/: XSketch.h
